fixed minor error on alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 300px;
 }
 
 .container{
@@ -89,12 +88,37 @@ body{
 .operators {
     grid-row: 2/6;
     display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.operators .plus {
+    grid-row: 1/2;
+    height: 100%;
+}
+
+.operators .subtract {
+    grid-row: 2/3;
+    height: 100%;
+}
+
+.operators .divide {
+    grid-row: 3/4;
+    height: 100%;
+}
+
+.operators .multiply {
+    grid-row: 4/5;
+    height: 100%;
 }
 
 .comma-container {
     display: grid;
     grid-column: 1/2;
-    grid-row: 6/7
+    grid-row: 6/7;
 }
 
 .delete-container {
